# Hook

./: .gitattributes  .gitignore  LICENSE  PROJECT_OVERVIEW.md  README.en.md  README.md  README.zh-CN.md  TECHNICAL_ARCHITECTURE.md  UIACCESS_DISTRIBUTION.md  build-hook-release.bat  eslint.config.js  package-hook-release.ps1  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.github/workflows/: build-hook-exe.yml  release-hook-tag.yml
__tests__/: releasePackaging.contract.test.ts
__tests__/integration/: ActionsMenuEscapeContract.test.ts  CaptureFocusPreservationContract.test.ts  CaptureInputShieldContract.test.ts  CaptureModeReadinessContract.test.ts  HookArchivedDocsSanitizationContract.test.ts  HookMemoryBaselineContract.test.ts  HookOptimizationGuardrailsContract.test.ts  HookPublicIdentityContract.test.ts  HookReadmeLocalizationContract.test.ts  HookReleaseWorkflowContract.test.ts  HookSigningDocsContract.test.ts  HookWorkflowCompatibilityContract.test.ts  ImageImportPreservationContract.test.ts  LongCaptureSessionContract.test.ts  OverlayInputShieldWindowContract.test.ts  OverlayRealDragPreferenceContract.test.ts  OverlaySyntheticClickFocusContract.test.ts  OverlaySyntheticHoverRelayContract.test.ts  OverlaySyntheticPointerResetContract.test.ts  OverlaySyntheticPortLinkingContract.test.ts  SingleInstanceScopeContract.test.ts  StickerBrushFreehandContract.test.ts  StickerCropInteractionContract.test.ts  StickerDoubleClickContract.test.ts  StickerDragOutContract.test.ts  StickerEditModeSwitchContract.test.ts  StickerEditSyntheticMoveRelayContract.test.ts  StickerEditTransformContract.test.ts  StickerRasterizeContract.test.ts  StickerTopStripContract.test.ts  StickerWheelResizeContract.test.ts  TopStripPropertyDropdownContract.test.ts  WebViewVideoCompositionContract.test.ts
__tests__/services/: imageSource.test.ts
__tests__/setup/: vitest.setup.ts
__tests__/unit/: artLoomStartup.test.ts  liveEraseQueue.test.ts  stickerGeometry.test.ts  uiRegistry.test.ts
docs/: AI_HANDOFF_PROJECT_MAP.md  CODE_SIGNING_POLICY.md  MAINTAINER_SIGNING_GUIDE.md  PRIVACY_POLICY.md  README.md  SIGNPATH_APPLICATION_CHECKLIST.md  SIGNPATH_APPLICATION_DRAFT.md
docs/migration/: hook-migration-completion-audit.md  hook-real-smoke-audit.md
scripts/: build-local-hook-exe.ps1  capture-homepage-assets.ps1  package-release-zip.ps1  sync-release-version.ps1
src/: app.css  app.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/: CAPTURE_CRATES_SOURCE.md  README.md
src-tauri/crates/drag/: .cargo_vcs_info.json  Cargo.toml
src-tauri/crates/drag/src/: lib.rs
src-tauri/crates/drag/src/platform_impl/gtk/: mod.rs
src-tauri/crates/drag/src/platform_impl/macos/: mod.rs
src-tauri/crates/drag/src/platform_impl/windows/: mod.rs
src-tauri/crates/scap-direct3d/src/: lib.rs  windows_version.rs
src-tauri/crates/scap-targets/: Cargo.toml
src-tauri/crates/scap-targets/src/: bounds.rs  lib.rs
src-tauri/crates/scap-targets/src/platform/: mod.rs
src-tauri/src/: app_settings.rs  capture.rs  capture_coords.rs  cli.rs  cli_engine.rs  dialogs.rs  fonts.rs  lib.rs  long_capture.rs  long_capture_session.rs  main.rs  mock_artloom.rs  mouse_monitor.rs  native_capture.rs  overlay.rs  persistence.rs  portable_paths.rs  precise_selection.rs  remote_session.rs  runtime.rs  screenshot.rs  scroll_capture.rs  scroll_capture_session.rs  scroll_line_stitch.rs  single_instance.rs  sticker_io.rs
src-tauri/src/voice/: audio.rs  client.rs  core.rs  hotkey.rs  insert.rs
src-tauri/tests/: tea_real_daemon_smoke.rs
src/components/: CanvasLinks.tsx  CanvasSelection.tsx  CanvasStickers.tsx  CanvasUnits.tsx  ColorPicker.tsx  SettingsPage.tsx  ShaderRenderer.ts  StickerActionsMenu.tsx  StickerAnnotationLayer.tsx  StickerContextMenuLayer.tsx  StickerEffectOverlay.tsx  StickerGroupBar.tsx  StickerPorts.tsx  StickerSidePanel.tsx  StickerSnapshotListPanel.tsx  StickerTopStrip.tsx  StickerTopStripPropertyBar.tsx  StickerView.tsx  UnitActionsMenu.tsx  UnitParamsPanel.tsx  UnitPorts.tsx  UnitView.tsx  stickerAnnotationModel.ts  stickerToolbarModel.ts
src/hooks/: useClipboard.ts  useDraggable.ts  useFileDrop.ts  useLinking.ts  useNodeParameters.ts  useSelection.ts  useShortcuts.ts  useStickerActions.ts  useUnitActions.ts
src/services/: api.ts  appSettings.ts  artLoomStartup.ts  artNodeFactory.ts  artPorts.ts  bootProfile.ts  captureState.ts  client.ts  fontCatalog.ts  graphImageResolution.ts  historyModel.ts  imageSource.ts  liveEraseQueue.ts  logger.ts  protocol.ts  shortcutChannels.ts  shortcuts.ts  stickerAnnotationPaint.ts  stickerAnnotationStyle.ts  stickerAnnotationTransforms.ts  stickerBeautify.ts  stickerBitmapLayers.ts  stickerCanvas.ts  stickerContextMenuController.ts  stickerEditPropagation.ts  stickerEditTransforms.ts  stickerEditing.ts  stickerEffects.ts  stickerExport.ts  stickerGeometry.ts  stickerGroups.ts  stickerHistory.ts  stickerImageResolution.ts  stickerLibraryModel.ts  stickerMeasurements.ts  stickerRasterize.ts  stickerRasterizeActions.ts  (+8 more)
(+21 files in other folders)
