[package]
name = "hook"
version = "0.1.0"
description = "Windows-first Tauri desktop capture and sticker editing workspace."
authors = ["yamiyu"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aiaimimi0920/Hook"
homepage = "https://github.com/aiaimimi0920/Hook"

[lib]
name = "hook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
diag_capture = []

[dependencies]
tauri = { version = "=2.11.2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.9"
base64 = "0.22.1"
arboard = "3.6.1"
tauri-plugin-global-shortcut = "2.3.1"
rdev = "0.5.3"
scap-targets = { path = "crates/scap-targets" }
scap-direct3d = { path = "crates/scap-direct3d" }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
dirs = "5.0"
clipboard-win = "5.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls_Dialogs",
] }

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.24.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
